# nginx-log-archiver

./: .gitignore  Dockerfile  README.md  archiver.py  blob_utils.py  consolidator.py  consolidator_fastly.py  dns_zones.py  logfile_clean.py  nginx_config_subdomain_auth.py  pyproject.toml  utils.py
.github/workflows/: image-build-scan.yml
scripts/: fastly_consolidate_logs.py  fastly_delete_blobs.py  fastly_logs_to_consolidate.py
