[tool.poetry]
name = "nginx-access-log-archiver"
version = "0.1.0"
description = "Utility for archiving the department's preserved Nginx access logs in the Parquet column-oriented data file format"
authors = ["Ashley Felton <ashley@ropable.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
azure-storage-blob = "^12.23.1"
ipython = "^8.28.0"
pyarrow = "^17.0.0"
python-dotenv = "^1.0.1"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["E265", "E501", "E722"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
